--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         Vlogs</title>
     </head>
     <body>
-    <h1>Peanut 
+    <center>
+        <h1>Peanut 
         Vlogs</h1>
         <h3>Ethan sitting with Peanut in coding class.</h3>
         <img src="Screen Shot 2021-05-02 at 11.58.08 AM.png">
@@ -14,5 +15,6 @@
            width="450"  src="https://i.ytimg.com/vi/RGC06mllRGE/maxresdefault.jpg"/>
         <h3>Peanut: I feel like the puppet of this bad teacher.</h3>
         <h3>Ethan: I feel so bad for you. :( </h3>
+        </center>
     </body>
 </html>
